[tool.poetry]
name = "gnn-causality-exploration"
version = "0.1.0"
description = "Exploring Causal Inferences in Finance with Graph Neural Networks"
authors = ["Alphanome.AI <info@alphanome.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
